# ultra-studio

./: .editorconfig  .gitattributes  .gitignore  README.md  agent.md  index.html  package-lock.json  package.json  start.bat  start.ps1  tsconfig.json  vite.config.ts
docs/: UltraStudio_开发文档.docx  UltraStudio_开发文档.md  user-manual.md
docs/adr/: 0001-single-loop-agent-runtime.md
docs/plans/: 2026-05-27-v0.5.3-stabilization.md  2026-06-28-conversation-artifact-ledger-design.md  2026-06-28-conversation-artifact-ledger.md  2026-06-28-session-context-artifacts-design.md  2026-06-28-session-context-artifacts.md
lora/: README.md
scripts/: fix_registration_form_layout.py  prepare_submission_materials.py  update_dev_doc_iteration.py  update_docs_and_speech.py
sidecar/: __main__.py  config.example.ini  main.py  requirements.txt  schemas.py
sidecar/agent_runtime/: __init__.py  events.py  legacy_bridge.py  loop.py  models.py  policy.py  providers.py  tools.py
sidecar/backend/: Wan 2.2 5b TI2V视频.json  lora加载.json  双图生图生模型.json  图片生模型.json  图生视频all-in-one-14b图生视频.json  图生视频all-in-one-14b文生视频.json  多视角生模型.json  改图.json  文生图片生模型.json
sidecar/db/: sqlite.py
sidecar/memory/: activated.py  branches.py  intent.py  json_store.py  ltm.py  manager.py  memory_map.py  schemas.py  stm.py
sidecar/models/: provider.py
src/: App.tsx  i18n.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: generation_events.rs  mod.rs  sidecar.rs
(+139 files in other folders)
